--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a href="https://git.gay" class="link" target="_blank">git.gay</a>
                 <a href="https://www.reddit.com" class="link" target="_blank">reddit</a>
                 <a href="https://odysee.com/" class="link" target="_blank">odysee
+                <a href="https://youtube.com" class="link" target="_blank">yt hate you
               
             </section>
         </main>
