--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
         </header>
         <main>
             <section class="links">
+                <div class="search-container">
+        <input type="text" id="search-input" placeholder="Search...">
+        <button id="search-button">Search</button>
+    </div>
                 <a href="https://discord.com" class="link" target="_blank">discord</a>
                 <a href="https://git.gay" class="link" target="_blank">git.gay</a>
                 <a href="https://www.reddit.com" class="link" target="_blank">reddit</a>
                 <a href="https://odysee.com/" class="link" target="_blank">odysee
-                <a href="https://youtube.com" class="link" target="_blank">yt hate you
-              
+                            
             </section>
         </main>
         <footer>
