--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>startpage</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="search-bar.css">
+      <script src="search.js"></script>
 </head>
 <body>
     <div class="container">
