--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <main>
             <section class="links">
                 <div class="search-container">
+                <form action="https://www.duckduckgo.com/" method="get">
         <input type="text" id="search-input" placeholder="                               Look Up">
     </div> 
                 <a href="https://discord.com" class="link" target="_blank">discord</a>
