--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         </header>
         <main>
             <section class="links">
-                <div class="search-container">
-                <form action="https://www.duckduckgo.com/" method="get">
-        <input type="text" id="search-input" placeholder="                               Look Up">
-    </div> 
+              <div class="search-container">
+        <form action="https://www.duckduckgo.com/" method="get">
+            <input type="text" id="search-input" name="q" placeholder="Look Up">
+            <button type="submit" id="search-button">Search</button>
+            
                 <a href="https://discord.com" class="link" target="_blank">discord</a>
                 <a href="https://git.gay" class="link" target="_blank">git.gay</a>
                 <a href="https://www.reddit.com" class="link" target="_blank">reddit</a>
