--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>Start Page</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="search-bar.css">
     <script src="search.js" defer></script>
 </head>
 <body>
     <div class="container">
         <header>
             <pre class="ascii-art">
-   \\  \\ //    
-  ==\\__\\/ //  
-    //   \\//    
- ==//     //==   
-  //\\___//     
- // /\\  \\==   
-   // \\  \\   
+      ___
+     (.· |
+     (<> |
+    / __  \
+   ( /  \ /|
+  _/\ __)/_)
+  \/-____\/
             </pre>
         </header>
         <main>
